Fix overflow issue in body element

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13,6 +13,7 @@ body {
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    overflow: hidden;
 }
 
 /* Estilo do modal quando estiver fechado */
